--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,15 +1,21 @@
-<mat-accordion multi="true" *ngIf="posts.length>0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length>0 !isLoading">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       <mat-panel-title>
         {{post.title}}
       </mat-panel-title>
     </mat-expansion-panel-header>
+    <div class="post-image">
+      <img [src]="post.imagePath" [alt]="post.title">
+    </div>
     <p>{{post.content}}</p>
-    <mat-action-row>
+    <mat-action-row *ngIf="isUserAuthenticated && userId === post.creator">
       <a [routerLink]="['/edit',post.id]" mat-button color="primary">EDIT</a>
       <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="mat-body-1" *ngIf="posts.length <= 0">No posts added yet!</p>
+<mat-paginator *ngIf="posts.length>0" [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageOptions"
+  (page)="onPageChanged($event)"></mat-paginator>
+<p class="mat-body-1" *ngIf="posts.length <= 0 &&  !isLoading">No posts added yet!</p>
