--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,14 +1,20 @@
 <mat-card>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+  <form [formGroup]="form" (submit)="onSavePost()"  *ngIf="!isLoading">
     <mat-form-field>
-      <input matInput placeholder="Post title" name="title" [ngModel]="post?.title" #title="ngModel" minlength="3"
-        required>
-      <mat-error *ngIf="title.invalid">Please enter proper title</mat-error>
+      <input matInput placeholder="Post title" name="title" formControlName="title">
+      <mat-error *ngIf="form.get('title').invalid">Please enter proper title</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">pick image</button>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <div class="image-preview" *ngIf="imagePreview && imagePreview!=='' && form.get('image').valid">
+      <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
     <mat-form-field>
-      <textarea matInput placeholder="Post content" name="content" rows="6" [ngModel]="post?.content"
-        required></textarea>
+      <textarea matInput placeholder="Post content" name="content" [formControlName]="'content'" rows="6"></textarea>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save</button>
   </form>
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
 </mat-card>
